tests/paczka1/fuzzy1/86537035.err
Error in line 3: rOaGx9eR7 S582 58,1
Error in line 14: ykjGB A416 33,7
Error in line 16: ykjGB A617 60,0
Error in line 18: ykjGB S968 41,8
Error in line 19: rOaGx9eR7 S582 41,9
Error in line 29: HOSfJjcatbu A416 16,4
Error in line 20: ykjGB A617 65,2
Error in line 33: 9SJuC A617 64,0
